# agentms

./: .env  Dockerfile  docker-compose.yml  env (1).example  env (2).example  env (3).example  env (4).example  env (5).example  main.py  pyproject.toml  requriement.txt  test_api.py
app/: config.py  db.py  dependencies.py  exceptions.py  main.py  middleware.py
app/agents/clients/: health_client.py  llm_client.py  vector_client.py
app/agents/graph/: checkpoint_repair.py  master_graph.py  state.py
app/agents/graph/subgraphs/: conversational_support_agent.py
app/agents/middleware/: message_trimmer.py  token_tracker.py
app/agents/pipeline/: __init__.py  classifier.py  formatter.py  models.py  orchestrator.py  post_processor.py  responses.py  suggestions.py
app/agents/shared/clients/: health_client.py  llm_client.py  vector_client.py
app/agents/shared/tools/: __init__.py  health_tool.py  ticket_tool.py
app/agents/specialized/it_support/: __init__.py  graph.py  state.py
app/agents/specialized/it_support/middleware/: message_trimmer.py  token_tracker.py
app/agents/specialized/it_support/tools/: search_tool.py
app/agents/tools/: __init__.py  health_tool.py  search_tool.py  ticket_tool.py
app/api/v1/: auth.py  chat.py  health.py  router.py
app/domains/auth/: dependencies.py  schemas.py  service.py
app/domains/conversations/: repository.py  schemas.py  service.py
app/domains/prompts/: cache.py  defaults.py  service.py
app/domains/users/: repository.py  schemas.py  service.py
test/: conftest.py
