[project]
name = "nextgenams-agent-engine"
version = "1.0.0"
description = "NextGenAMS AI Agent Engine — PwC IT Support Automation"
requires-python = ">=3.11"

dependencies = [
    # ── LangGraph + LangChain ────────────────────────────────────────────────
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langchain-core>=1.4.0",
    "langgraph-checkpoint-mongodb>=0.4.0",

    # ── FastAPI ──────────────────────────────────────────────────────────────
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "python-multipart>=0.0.28",

    # ── HTTP Client ──────────────────────────────────────────────────────────
    "httpx>=0.28.1",

    # ── MongoDB ──────────────────────────────────────────────────────────────
    "pymongo>=4.17.0",

    # ── Auth ─────────────────────────────────────────────────────────────────
    "PyJWT>=2.12.1",
    "cryptography>=48.0.0",

    # ── Config + Validation ──────────────────────────────────────────────────
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",

    # ── Redis ────────────────────────────────────────────────────────────────
    "redis>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",   # AsyncClient for FastAPI testing
    "ruff>=0.11.0",    # Lint + format
    "mypy>=1.15.0",    # Static typing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true